src/run_environment/github_actions/snapshots/codspeed_runner__run_environment__github_actions__provider__tests__fork_pull_request_run_environment_metadata.snap
---
source: src/run_environment/github_actions/provider.rs
expression: run_environment_metadata
---
{
  "ref": "refs/pull/22/merge",
  "headRef": "fork-owner:feat/codspeed-runner",
  "baseRef": "main",
  "owner": "my-org",
  "repository": "adrien-python-test",
  "event": "pull_request",
  "sender": {
    "id": "19605940",
    "login": "adriencaccia"
  },
  "localData": null,
  "repositoryRootPath": "/home/runner/work/adrien-python-test/adrien-python-test/"
}
